# career-profile-evaluation

./: .dockerignore  .gitignore  AGENTS.md  AWS_INFRASTRUCTURE.md  CLAUDE.md  DEV_SETUP.md  PERSONAS.md  PERSONA_1_ACCURACY_ANALYSIS.md  QUIZ_FIELDS_DOCUMENTATION.md  QUIZ_QUESTIONS_AND_OPTIONS.md  README.md  TEST_SCRIPT_FRONTEND_ALIGNMENT.md  TEST_SCRIPT_README.md  VPC_DEEP_DIVE.md  docker-compose.yml  mock_scaler_backend.py  test_comprehensive_personas.py  test_detailed_flow_verification.py  test_personas_comprehensive.py
backend/: Dockerfile  README.md  database.py  init.sql  pyproject.toml
backend/src/api/: main.py
backend/src/config/: exceptions.py  logging_config.py  personas.json  settings.py
backend/src/models/: __init__.py  models.py  models_raw.py
backend/src/repositories/: cache_repository.py
backend/src/services/: current_profile_summary.py  interview_readiness_logic.py  job_descriptions.py  peer_comparison_logic.py  persona_matcher.py  profile_notes_logic.py  quick_wins_logic.py  run_poc.py  scoring_logic.py  timeline_logic.py  tools_logic.py
backend/src/utils/: label_mappings.py  validate_response.py
frontend/: .eslintignore  .eslintrc.json  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: GoalsPage.js  LandingPage.js  MasterclassNudge.jsx  NavigationBar.js  NudgeModal.jsx  QuizPage.js  ResultsPage.js
frontend/src/constants/: analytics.js  programOption.js
frontend/src/context/: ProfileContext.js
frontend/src/hooks/: useGTMSectionTracking.js
(+65 files in other folders)
